# logan-analyzer

./: .gitignore  09.html  README.md  config.example.yaml  config.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_test_log.py
src/logan/: __init__.py  analyzer.py  cli.py
test/: test_analyzer.py  test_cli.py
tests/: test_analyzer.py
